--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -56,6 +56,7 @@ Section "Contact"
 
         .contact__mail {
             color: $main-color;
+            text-decoration: none;
         }
     }
 
