--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -8,68 +8,116 @@ Navigation
 
 #main-nav {
     background-color: transparent;
-    height: 30px;
-    border: none;
-    border-radius: 0;
-    padding: 0;
-    margin: 0;
-    position: fixed;
+    position: absolute;
     top: 0;
-    text-align: center;
     width: 100%;
+    min-height: 50px;
     z-index: map-get($z-index, nav);
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
     
-    .container {
-        ul {
-            li {
-                a {
-                    color: #fff;
-                    font-size: 14px;
-                    font-weight: 100;
-                    margin-top: 5px;
-                    text-transform: uppercase; 
-                    letter-spacing: 1px;
-                    transition: all 0.5s linear;
-                    font-weight: bold;
-                    
-                    &:hover {
-                        transform: scale(1.1);
-                    }
+    #toggle {
+        display: none; 
+        cursor: pointer;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        margin: 17px 20px 0 0;
+        
+        .bar {
+            border-top: 3px solid #fff;
+            display: block;
+            position: absolute;
+            left: 0;
+            width: 100%;
+            transition: all 0.3s ease-in-out;
+        }
+        
+        .bar-top {
+            top: 0;
+        }
+        
+        .bar-middle {
+            top: 7px;
+        }
+        
+        .bar-bottom {
+            top: 14px;
+        }
+        
+        .bar-top.active {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+        .bar-middle.active {
+            opacity: 0;
+        }
+        .bar-bottom.active {
+            transform: rotate(-45deg) translate(5px, -5px);
+        }
+    }
+    
+    ul.nav-left {
+        margin: 20px 0 0 40px;
+    }
+    
+    ul.nav-right {
+        margin: 20px 40px 0 0;
+    }
+    
+    ul {  
+        li {
+            display: inline-block;
+            margin-left: 20px;
+            
+            a {
+                text-decoration: none;
+                color: #fff;
+                font-size: 14px;
+                text-transform: uppercase; 
+                letter-spacing: 1px;
+                transition: all 0.3s linear;
+                display: block;
+                font-weight: 600;
+
+                &:hover {
+                    transform: scale(1.1);
                 }
-                
-                .nav__icon {
-                        font-size: 20px;
-                        transition: all 0.3s linear;
-                    
-                        &:hover {
-                            transform: scale(1.3);
-                        }
-                    }
-                
-                a::before {
-                    content: "";
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
-                    transition: all 0.5s ease-in-out;
-                    width: 0;
-                    height: 2px;
-                    border-bottom: 1px solid $main-color;
-                    margin-bottom: 5px;
+            }
+            
+            .nav__icon {
+                font-size: 20px;
+                transition: all 0.3s linear;
+
+                &:hover {
+                    transform: scale(1.3);
                 }
-                
-                a:not(.nav__icon):hover::before {
-                    width: 100%;
-                }
+            }   
+            
+            a::before {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                transition: all 0.3s ease-in-out;
+                width: 0;
+                height: 2px;
+                border-bottom: 1px solid $main-color;
+                margin-bottom: -5px;
+            }
+            
+            a:not(.nav__icon):hover::before {
+                width: 100%;
             }
         }
     }
 }
 
 #main-nav.scrolled {
-    height: 20px;
-    transition: all 0.5s linear;
-    background: $light-color;
+    transition: all 0.3s linear;
+    background: rgba(118, 129, 133, 1);
+    position: fixed;
+    box-shadow: 0px 0px 10px 1px rgba(49,61,70,1);
     
     ul {
         li {
